feat: start implement slog

--- a/scripts/payments-cli/configs/example.env
+++ b/scripts/payments-cli/configs/example.env
@@ -4,6 +4,7 @@
 # Telegram Bot Configuration
 TELEGRAM_BOT_TOKEN=your_bot_token_here
 TELEGRAM_USER_ID=your_user_id_here
+LOG_LEVEL=warn
 
 # File Paths
 DATA_PATH=~/.config/waybar/payments.json
