--- a/scripts/payments-cli/configs/example.env
+++ b/scripts/payments-cli/configs/example.env
@@ -1,15 +1,10 @@
-# Payments CLI Configuration
-# Copy this file to .env and update the values
-
-# Telegram Bot Configuration
 TELEGRAM_BOT_TOKEN=your_bot_token_here
 TELEGRAM_USER_ID=your_user_id_here
 LOG_LEVEL=warn
 
-# File Paths
 DATA_PATH=~/.config/waybar/payments.json
+DEPOSITS_DATA_PATH=~/.config/waybar/deposits.json
 LEDGER_PATH=~/ObsidianVault/finances/transactions.ledger
 
-# Notification Settings
 NOTIFY_DAYS_BEFORE=3
 ENABLE_TELEGRAM_NOTIFICATIONS=true
